Cycles OSL: Bevel and AO nodes not working anymore #57393

Closed
opened 2018-10-26 18:19:53 +02:00 by Ilja Razinkov · 6 comments

System Information
MacOs 10.16.3 (High Sierra)

Blender Version
Broken: 2.79 (build date: 2018-10-25 12:50)
Worked: 2.79 (build date: 2018-08-08 22:14)

Short description of error
After downloading latest nightly build some Cycle nodes stopped working. Namely "Ambient Occlusion" node and "Bevel" node.

Exact steps for others to reproduce the error
With latest build "Ambient Occlusion" node and "Bevel" node outputs plain color/default value instead of sampled occlusion/averaged normal.
See attached blend file for reference aobug.blend

Also, i see following lines in console, seems to be related:

ERROR: [RendererServices::texture] Image "@bevel" does not exist. Also, it is not the name of an image format that OpenImageIO recognizes.
ERROR: [RendererServices::texture] Image "@ao" does not exist. Also, it is not the name of an image format that OpenImageIO recognizes.
ERROR: [RendererServices::texture] Image "@bevel" does not exist. Also, it is not the name of an image format that OpenImageIO recognizes.

**System Information** MacOs 10.16.3 (High Sierra) **Blender Version** Broken: 2.79 (build date: 2018-10-25 12:50) Worked: 2.79 (build date: 2018-08-08 22:14) **Short description of error** After downloading latest nightly build some Cycle nodes stopped working. Namely "Ambient Occlusion" node and "Bevel" node. **Exact steps for others to reproduce the error** With latest build "Ambient Occlusion" node and "Bevel" node outputs plain color/default value instead of sampled occlusion/averaged normal. See attached blend file for reference [aobug.blend](https://archive.blender.org/developer/F5243243/aobug.blend) Also, i see following lines in console, seems to be related: ERROR: [RendererServices::texture] Image "@bevel" does not exist. Also, it is not the name of an image format that OpenImageIO recognizes. ERROR: [RendererServices::texture] Image "@ao" does not exist. Also, it is not the name of an image format that OpenImageIO recognizes. ERROR: [RendererServices::texture] Image "@bevel" does not exist. Also, it is not the name of an image format that OpenImageIO recognizes.
Author

Added subscriber: @IPv6

Added subscriber: @IPv6
Brecht Van Lommel changed title from Cycles: Bevel and AO nodes not working anymore to Cycles OSL: Bevel and AO nodes not working anymore 2018-10-26 19:14:48 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

I think this happened when upgrading to latest OSL. Maybe it's doing a new runtime optimization that we are not handling correctly.

I think this happened when upgrading to latest OSL. Maybe it's doing a new runtime optimization that we are not handling correctly.

This issue was referenced by blender/cycles@82969d2deb

This issue was referenced by blender/cycles@82969d2debaf17c0e74fd4838232e88f98469fa9

This issue was referenced by c0b3e3daeb

This issue was referenced by c0b3e3daebd36a483e659d32e6517f2fb9b0e277

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57393
No description provided.