Fix T57393: Cycles OSL bevel and AO not working after OSL upgrade.